@@ -1,3 +1,7 @@
+2007-03-01  Karsten Dambekalns <karsten@typo3.org>
+
+	* typo3/sysext/indexed_search: DBAL compliancy patch
+
 2007-02-27  Oliver Hader  <oh@inpublica.de>
 
 	* Fixed bug: #5052: Form action URL is not htmlspecialchared (patch by Michael Stucki)
